--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "medical-exam",
+  "name": "common-react-project-setup",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
